--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.1"
 authors = ["XBagon <xbagon@outlook.de>"]
 description = "Priority Queue implemented using std::collections::BinaryHeap."
 license = "MIT"
+repository = "https://github.com/XBagon/prioq"
 
 [dependencies]
